--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<section style="text-align:center;margin-top:25%;">
-<a style="text-decoration:none" href="{% url 'home' %}"><button class="upload">Detect From Image</button></a>
-<a style="text-decoration:none" href="{% url 'forum' %}"><button class="upload">Ask on Forum</button></a>
-</section>
+<!-- <section style="text-align:center;margin-top:25%;">
+<!-- <a style="text-decoration:none" href="{% url 'home' %}"><button class="upload">Detect From Image</button></a> -->
+<!-- <a style="text-decoration:none" href="{% url 'forum' %}"><button class="upload">Ask on Forum</button></a> 
+</section> -->
 
 {% endblock %}
