--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PLANT LEAF DISEASE PREDICTION</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
-      integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="{% static 'css/index.css' %}" />
-    <style>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PLANT LEAF DISEASE PREDICTION</title>
+  <link rel="icon" href="../static/images/logo.jpg" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/index.css' %}" />
+  <!-- <style>
       * {
         margin: 0px;
         padding: 0px;
@@ -110,11 +117,453 @@
         background-color: #01c7a3;
         border: 2px solid #01c7a3;
       }
-    </style>
-  </head>
+    </style> -->
+  <style>
+    * {
+      margin: 0px;
+      padding: 0px;
+      box-sizing: border-box;
 
-  <body>
-      {% block content %}
-      {% endblock %}
-  </body>
+
+    }
+
+    #form {
+      background: white url("{% static 'images/3.jpg' %}") no-repeat;
+      background-size: 100%;
+    }
+
+    .carousel-inner img {
+      height: 70vh;
+    }
+
+    .heading {
+      color: #008970;
+      width: 70%;
+      margin-inline: auto;
+      background: #ffffff42;
+    }
+
+    .heading h1 {
+      font-size: 4rem;
+      text-align: center;
+    }
+
+    form {
+      display: flex;
+      height: 85vh;
+      justify-content: center;
+      align-items: center;
+      margin-top: 50px;
+      width: 60%;
+      text-align: center;
+      margin: auto;
+    }
+
+    .details h2 {
+
+      position: relative;
+      top: 100px;
+      margin: auto;
+      color: rgb(18, 231, 231);
+      font-size: 3rem;
+    }
+
+    label:hover {
+      transform: scale(1.03);
+    }
+
+    .details h2 {
+      /* margin-bottom: 300px; */
+      position: relative;
+      top: 100px;
+      margin: auto;
+      color: rgb(18, 231, 231);
+      font-size: 3rem;
+
+    }
+
+    .gallery-h1 h1 {
+
+      background-color: rgb(44, 43, 43);
+      color: white;
+      padding: 20px;
+      border-radius: 15px;
+
+    }
+
+    #inputsec h1 {
+
+      background-color: rgb(44, 43, 43);
+      color: white;
+      padding: 20px;
+      border-radius: 15px;
+
+    }
+
+    .details h1 {
+      color: white;
+      padding: 20px;
+      border-radius: 15px;
+      background-color: rgb(45, 47, 49);
+    }
+
+    .upload {
+
+      font-size: 20px;
+      background-color: rgb(255, 252, 252);
+      border-radius: 20px;
+      outline: none;
+      width: 315px;
+      color: rgb(0, 0, 0);
+      border: 3px solid rgb(45, 47, 49);
+
+    }
+
+    ::-webkit-file-upload-button {
+      color: white;
+      padding: 20px;
+      border: 2px solid rgb(129, 129, 129);
+      background-color: rgb(129, 129, 129);
+      border-radius: 15px;
+
+    }
+
+    ::-webkit-file-upload-button:hover {
+      border-radius: 20px;
+      border: 2px solid rgb(177, 174, 174);
+
+    }
+
+    input[type="submit"] {
+      position: absolute;
+      margin-left: -4rem;
+      padding: 15px 35px;
+      background-color: white;
+      border-radius: 15px;
+      color: black;
+      font-size: 1.5rem;
+      border: 4px solid rgb(31, 185, 190);
+    }
+
+    .carousel-caption {
+      background: rgba(24, 25, 26, 0.5);
+      border-radius: 10px;
+    }
+
+    .carousel-caption h3 {
+
+
+      font-family: 'Rowdies', cursive;
+      color: yellow;
+      text-transform: uppercase;
+      margin-bottom: 10px;
+
+    }
+
+    .carousel-caption p {
+      padding: 7px;
+
+    }
+
+    .img-thumbnail {
+      height: 300px;
+    }
+
+    .Content-h5 {
+
+      padding: 15px;
+      background-color: rgb(153, 156, 150);
+      color: white;
+      border-radius: 15px;
+      margin-bottom: 25px;
+    }
+
+    @media only screen and (max-width: 325px) {
+      body {
+        font-size: x-small;
+      }
+    }
+
+    .navbar-nav {
+      margin-left: auto;
+    }
+
+    #upload {
+      opacity: 0;
+    }
+
+    #upload-label {
+      position: absolute;
+      top: 50%;
+      left: 1rem;
+      transform: translateY(-50%);
+    }
+
+    .image-area {
+      border: 2px dashed rgba(0, 0, 0, 0.7);
+      padding: 1rem;
+      position: relative;
+    }
+
+    .image-area::before {
+      content: 'Uploaded image result';
+      color: rgb(0, 0, 0);
+      font-weight: bold;
+      text-transform: uppercase;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 0.8rem;
+      z-index: 1;
+    }
+
+    .image-area img {
+      z-index: 2;
+      position: relative;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Recommendation of pesticides by analyzing plant disease using Machine
+        Learning</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#inputsec">Service</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <header>
+    <div class="container-fluid" id="home">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="3" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="4" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="5" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="6" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="7" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="8" class=""></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active ">
+            <img src="/static/images/img1.jpg" class="d-block w-100" alt="...">
+
+            <div class="container">
+              <div class="container background-img3">
+                <div class="carousel-caption">
+
+                  <h3>Recommendation of pesticides by analyzing plant disease using Machine Learning</h3>
+                  <p>
+                    Many veterans said that Deep Learning and AI is a threat to our world, but if we
+                    use it properly, we can do many good things today, we will see a small example
+                    of this in which we will be in plant leafs
+                    Find out about the disease
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="/static/images/img2.jpg" class="d-block w-100" alt="...">
+            <div class="container">
+              <div class="carousel-caption">
+                <h3>मशीन लर्निंग का उपयोग करके पौधों की बीमारी का विश्लेषण </h3>
+                <p>
+                  कई दिग्गजों ने कहा कि Deep Learning and AI यह हमारी दुनिया के लिए खतरा है लेकिन अगर
+                  हम इसका सही यूज़ करें तो हम कई अच्छे काम भी कर सकते हैं आज इसी का छोटा सा example
+                  देखेंगे जिसमें हम पौधों में होने वाले
+                  रोग के बारे मे पता करेगें</p>
+
+              </div>
+            </div>
+          </div>
+
+
+          <div class="carousel-item">
+            <img src="/static/images/1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/images/banner4.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/images/banner5.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/images/banner6.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/images/banner7.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/images/banner8.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </header>
+
+  {% block content %}
+  {% endblock %}
+
+  <section style="margin-bottom: 100px;" id="about">
+
+    <div class="container gallery-h1">
+
+      <h1 class="text-center mt-4 mb-4">Photo Gallery</h1>
+
+      <hr class="mt-2 mb-5">
+
+      <div class="row text-center text-lg-left">
+
+        <div class="col-lg-4 col-md-4 col-6 col-12">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/images/g2.png" alt="">
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-6 col-12">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/images/Fotolia.jpg" alt="">
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-6 col-12">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/images/Fungus.png" alt="">
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-6 col-12">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/images/plantdisease.jpeg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-6 col-12">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/images/background-.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-6 col-12">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="/static/images/maxresdefault.jpg" alt="">
+          </a>
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+
+
+  <section>
+    <div class="container">
+      <div class="row justify-content-between">
+        <div class="col container Content-h5">
+          <div class="row text-center text-lg-left">
+
+            <h5 style="font-size: 2rem;" class="text-center my-1 contents">
+              Crop production problems are common in India which severely effect rural farmers, agriculture sector and
+              the
+              country’s economy as a whole. In Crops leaf plays an important role as it gives information about the
+              quantity and quality of agriculture yield in advance depending upon the condition of leaf. In this paper
+              we
+              proposed the system which works on preprocessing, feature extraction of leaf images from plant village
+              dataset followed by convolution neural network for classification of disease and recommending Pesticides
+              using Tensor flow technology. The main two processes that we use in our system is android application with
+              Java Web Services and Deep Learning. We have use Convolution Neural Network with different layers five,
+              four
+              & three to train our model and android application as a user interface with JWS for interaction between
+              these systems. Our results show that the highest accuracy achieved for 5-layer model with 95.05% for 15
+              epochs and highest validation accuracy achieved is for 5-layer model with 89.67% for 20 epochs using
+              tensor
+              flow.</h5>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- /*  ==========================================
+    SHOW UPLOADED IMAGE
+* ========================================== */ -->
+  <script>
+
+    function readURL(input) {
+      if (input.files && input.files[0]) {
+        var reader = new FileReader();
+
+        reader.onload = function (e) {
+          $('#imageResult')
+            .attr('src', e.target.result);
+        };
+        reader.readAsDataURL(input.files[0]);
+      }
+    }
+
+    $(function () {
+      $('#upload').on('change', function () {
+        readURL(input);
+      });
+    });
+
+    /*  ==========================================
+        SHOW UPLOADED IMAGE NAME
+        * ========================================== */
+    var input = document.getElementById('upload');
+    var infoArea = document.getElementById('upload-label');
+
+    input.addEventListener('change', showFileName);
+    function showFileName(event) {
+      var input = event.srcElement;
+      var fileName = input.files[0].name;
+      infoArea.textContent = 'File name: ' + fileName;
+    }
+
+  </script>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+
+
+</body>
+
 </html>
